# technical-test-ahtglobal

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  database.py  inventory.py  models.py
app/templates/: 404.html  base.html
app/templates/crud/: create.html  delete.html  edit.html  list.html
tests/: test_inventory.py
